--- a/TODO.txt
+++ b/TODO.txt
@@ -9,12 +9,12 @@ mandatory
   part1                       part2
  ✅ isalpha                 *✅ ft_substr
  ✅ isdigit                 *✅ ft_strjoin
- ✅ isalnum                  • ft_strtrim
+ ✅ isalnum                 *✅ ft_strtrim
  ✅ isascii                  • ft_split
- ✅ isprint                  • ft_itoa
+ ✅ isprint                 *✅ ft_itoa
  ✅ strlen                   • ft_strmapi
  *✅ memset                   • ft_striteri
- *✅ bzero                    • ft_putchar_fd
+ ✅ bzero                    • ft_putchar_fd
  *✅ memcpy                   • ft_putstr_fd
  *✅ memmove                  • ft_putendl_fd
  *✅ strlcpy                  • ft_putnbr_fd
@@ -29,7 +29,7 @@ mandatory
  ✅ strnstr
  ✅ atoi
     uses malloc:
-  *✅• calloc
+  *✅ calloc
   *✅ strdup
 
 bonus:
